Agrego indexacion por post y carga dinamica para componente blog

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -32,7 +32,7 @@ const showMore = posts.length > 3;
       {
         visiblePosts.map((post, index) => (
           <a
-            href={`/posts/${post.id}`}
+            href={`/blog/${post.id}`}
             class="bg-[rgba(48,49,54,0.7)] rounded-3xl flex flex-col border-[1px] border-[rgba(255,255,255,0.2)] max-h-[485px] overflow-hidden text-white"
           >
             <img
