--- a/src/components/blog/SubHeader.astro
+++ b/src/components/blog/SubHeader.astro
@@ -5,7 +5,7 @@ type Categorie = {id: number, name: string};
 
 <div class="text-md bg-gray-800 text-white w-full text-center py-2 flex justify-between">
   <div class="container mx-auto px-4 lg:px-32 flex gap-4">
-      <span>📖Blog</span>
+      <a href="/blog">📖Blog</a>
       <span>/</span>
       <span
         >{
