--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,6 @@ import '../styles/Diagonals.css'
   <FeaturesDiagonal client:load/>
   <Pricing />
   <Brands />
-  <Blog />
+  <Blog server:defer/>
   <FAQ client:load /> 
 </Layout>
