--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,12 @@ import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
+  description?: string;
+  image?: string;
+  url?: string;
 }
 
-const { title } = Astro.props;
+const { title, description, image, url } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,11 +19,15 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/faviconAgencia.svg" />
     <meta name="generator" content={Astro.generator} />
-    <meta
-      name="description"
-      content="En Technodevs ofrecemos desarrollo y diseño web, aplicaciones a medida y estrategias digitales. Innovamos para potenciar negocios y destacar tu marca online. Argentina."
-    />
+
     <title>{title}</title>
+    <meta name="description" content={description || "Desarrollo web y aplicaciones a medida con estrategias digitales."} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description || "Desarrollo web y aplicaciones a medida con estrategias digitales."} />
+    {image && <meta property="og:image" content={image} />}
+    {url && <meta property="og:url" content={url} />}
+
+    <meta property="og:type" content="article" />
     <link
       rel="preload"
       href="/fonts/Inter_18pt-Regular.woff2"
@@ -52,18 +59,9 @@ const { title } = Astro.props;
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSM8YQEE64"
     ></script></head
   >
-  
-  <!-- Google tag (gtag.js) -->
 
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KSM8YQEE64"></script>
 
-    gtag("config", "G-KSM8YQEE64");
-  </script>
 
   <body class="bg-bgDark1">
     <main aria-label="Main content">
