--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -41,13 +41,9 @@ const showMore = posts.length > 3;
               class="w-full min-h-64 object-cover rounded-t-3xl"
             />
             <div class="p-6">
-              <h3 class="text-2xl font-semibold text-primaryText mb-4">
+              <h3 class="text-2xl font-semibold text-primaryText mb-4 line-clamp-4">
                 {post.title}
               </h3>
-              <p
-                class="text-white"
-                set:html={post.subtitle}
-              />
             </div>
           </a>
         ))
