Arreglo indexacion de landing principal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import '../styles/Theme.css'
 import '../styles/Diagonals.css'
 ---
 
-<Layout title="Desarrollo y Diseño Web Profesional, Aplicaciones y Estrategias Digitales Argentina">
+<Layout title="Technodevs - Desarrollo Web y Social Media en San Juan">
   <Splash />
   <Features1 />
   <FeaturesDiagonal client:load/>
