agregando boton de wsp y cambiando mail footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -94,7 +94,8 @@ import { Image } from 'astro:assets';
       </div>
     </div>
     <div class="mt-10 text-center text-gray-400 relative">
-      <p class="z-10">Contacto: technodevscontacto@gmail.com</p>
+      
+      <p class="z-10">Contacto: <a href="mailto:agencia@technodevs.com.ar">agencia@technodevs.com.ar</a></p>
     </div>
   </div>
 </footer>
