--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -56,9 +56,11 @@ const showMore = posts.length > 3;
         <div class="flex justify-center mt-8">
           <a
             href="/blog"
-            class="bg-gray-100 text-blackPrimary py-2 px-6 rounded-full font-semibold transition hover:bg-primaryTextHover"
+            class="primary-button"
           >
+            <span>
             Ver más
+            </span>
           </a>
         </div>
       )
