Fix seo in page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import '../styles/Diagonals.css'
 import WhatsappButton from '../components/WhatsappButton.astro'
 ---
 
-<Layout title="Technodevs - Desarrollo Web y Social Media en San Juan">
+<Layout title="Desarrollo Web y Estrategias Digitales | Technodevs Argentina">
   <Splash />
   <Features1 />
   <FeaturesDiagonal client:load/>
